# HNC

./: .gitignore  pyproject.toml  requirements.txt
src/: db_pre.sqlite3  manage.py
src/BasicInfo/: admin.py  apps.py  models.py
src/BasicInfo/migrations/: 0001_initial.py  0002_catalogarea_code_catalogcallreason_code_and_more.py
src/Calls/: admin.py  apps.py  models.py
src/Calls/migrations/: 0001_initial.py
src/Customers/: admin.py  apps.py  models.py
src/Customers/migrations/: 0001_initial.py  0002_alter_client_national_code_and_more.py
src/Equipments/: apps.py  models.py
src/Equipments/migrations/: 0001_initial.py  0002_catalogequipment_code.py
src/Financial/: apps.py  models.py
src/Financial/migrations/: 0001_initial.py
src/Orders/: admin.py  apps.py  farsi_messages.py  forms.py  models.py  urls.py  views.py
src/Orders/migrations/: 0001_initial.py  0002_remove_carecontract_personnel_payment_status.py
src/Orders/static/css/: forms.css
src/Patients/: admin.py  models.py
src/Patients/migrations/: 0001_initial.py
src/Personnel/: admin.py  apps.py  forms.py  models.py
src/Personnel/migrations/: 0001_initial.py  0002_alter_personnel_national_code.py
src/TehranDarman/: asgi.py  settings.py  urls.py  wsgi.py
src/common/: field_choices.py  fields.py  utils.py  validators.py
src/templates/Orders/: ClientNewPayment.html  PersonnelNewPayment.html  form.html
src/templates/admin/: app_list.html  base.html
